removed unused pictures

--- a/index.html
+++ b/index.html
@@ -27,8 +27,34 @@
                 <p class="underName bold" id="manager">Manager</p>
                 <p class="underName" id="mail">helena@Brauer.com</p>
             </div>
-            <div id="test"></div>
         </div>
     </header>
+
+    <div id="main">
+        <div id="left">
+            <div id="classification">
+                <div class="classe">Popular</div>
+                <div class="classe">Recommended</div>
+                <div class="classe">Extreme</div>
+            </div>
+
+            <div id="illustration">
+                <div id="illustrImgContainer">
+                    <img src="src/image/camp.png" alt="Cabanne">
+                </div>
+                <div id="threeDots">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div id="details">
+                    <h1>Bonne Ance</h1>
+                    <a href="">More details</a>
+                </div>
+            </div>
+        </div>
+        <div id="right"></div>
+    </div>
+
 </body>
 </html>
