--- a/index.html
+++ b/index.html
@@ -42,18 +42,73 @@
                 <div id="illustrImgContainer">
                     <img src="src/image/camp.png" alt="Cabanne">
                 </div>
-                <div id="threeDots">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
+
                 <div id="details">
                     <h1>Bonne Ance</h1>
                     <a href="">More details</a>
                 </div>
+
+                <div id="threeDots">
+                    <div>Point</div>
+                    <div>Point</div>
+                    <div>Point</div>
+                </div>
+
+                <div class="left_cards">
+                    <div class="left_card">
+                        <img src="./src/image/compass.svg" alt="compass" class="left_icon">
+                        <a href="#">More details</a>
+                    </div>
+
+                    <div class="left_card">
+                        <img src="./src/image/map.svg" alt="compass" class="left_icon">
+                        <a href="#">More details</a>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <div id="right"></div>
+        <div id="right">
+            <div class="right_cards">
+                <div class="right_card">
+                    <img src="./src/image/snorkeling.svg" alt="compass" class="right_icon">
+                    <p class="description">36 hours <br> Snorkeling</p>
+                    <div class="threeimg">
+                        <img src="./src/image/man-g3c16e4c0f_640.jpg" alt="">
+                        <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
+                        <img src="./src/image/woman-g4c3acef31_640.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="right_card">
+                    <img src="./src/image/Hilking.svg" alt="compass" class="right_icon">
+                    <p class="description">64 hours <br> Hiking</p>
+                    <div class="threeimg">
+                        <img src="./src/image/man-g3c16e4c0f_640.jpg" alt="">
+                        <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="right_card">
+                    <img src="./src/image/kayaking.svg" alt="compass" class="right_icon">
+                    <p class="description">42 hours <br> Kayaking</p>
+                    <div class="threeimg">
+                        <img src="./src/image/man-g3c16e4c0f_640.jpg" alt="">
+                        <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
+                        <img src="./src/image/woman-g4c3acef31_640.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="foot">
+                <p>Greenwich Street New York, NY 10007</p>
+                <dic class="icons">
+                    <img src="" alt="f">
+                    <img src="" alt="in">
+                    <img src="" alt="vorona">
+                </dic>
+            </div>
+            
+        </div>
     </div>
 
 </body>
