amelioration du mobile

--- a/index.html
+++ b/index.html
@@ -45,27 +45,29 @@
 
                 <div id="details">
                     <h1>Bonne Ance</h1>
-                    <a href="">More details</a>
+                    <a href="#">More details</a>
                 </div>
 
                 <div id="threeDots">
-                    <div>Point</div>
-                    <div>Point</div>
-                    <div>Point</div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+
+            <div class="left_cards">
+                <div class="left_card">
+                    <img src="./src/image/compass.svg" alt="compass" class="left_icon">
+                    <p>Camping guide</p>
+                    <a href="#">More details</a>
                 </div>
 
-                <div class="left_cards">
-                    <div class="left_card">
-                        <img src="./src/image/compass.svg" alt="compass" class="left_icon">
-                        <a href="#">More details</a>
-                    </div>
-
-                    <div class="left_card">
-                        <img src="./src/image/map.svg" alt="compass" class="left_icon">
-                        <a href="#">More details</a>
-                    </div>
-
+                <div class="left_card">
+                    <img src="./src/image/map.svg" alt="compass" class="left_icon">
+                    <p>Dangerous hikes</p>
+                    <a href="#">More details</a>
                 </div>
+
             </div>
         </div>
         <div id="right">
@@ -78,6 +80,11 @@
                         <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
                         <img src="./src/image/woman-g4c3acef31_640.jpg" alt="">
                     </div>
+                    <div class="dots">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
 
                 <br>
@@ -88,6 +95,11 @@
                     <div class="threeimg">
                         <img src="./src/image/man-g3c16e4c0f_640.jpg" alt="">
                         <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
+                    </div>
+                    <div class="dots">
+                        <div></div>
+                        <div></div>
+                        <div></div>
                     </div>
                 </div>
 
@@ -101,14 +113,19 @@
                         <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
                         <img src="./src/image/woman-g4c3acef31_640.jpg" alt="">
                     </div>
+                    <div class="dots">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
             </div>
             <div class="foot">
                 <p>Greenwich Street New York, NY 10007</p>
                 <dic class="icons">
-                    <img src="" alt="f">
-                    <img src="" alt="in">
-                    <img src="" alt="vorona">
+                    <img src="./src/image/facebook-f.svg" alt="">
+                    <img src="" alt="">
+                    <img src="./src/image/twitter.svg" alt="">
                 </dic>
             </div>
             
