--- a/index.html
+++ b/index.html
@@ -44,28 +44,30 @@
                 </div>
 
                 <div id="details">
-                    <h1>Bonne Ance</h1>
-                    <a href="">More details</a>
-                </div>
-
-                <div id="threeDots">
-                    <div>Point</div>
-                    <div>Point</div>
-                    <div>Point</div>
-                </div>
-
-                <div class="left_cards">
-                    <div class="left_card">
-                        <img src="./src/image/compass.svg" alt="compass" class="left_icon">
-                        <a href="#">More details</a>
+                    <div id="text">
+                        <h2>Bonne Ance</h2>
+                        <a href="">More details</a>
                     </div>
-
-                    <div class="left_card">
-                        <img src="./src/image/map.svg" alt="compass" class="left_icon">
-                        <a href="#">More details</a>
+                    <div id="threeDots">
+                        <div>Point</div>
+                        <div>Point</div>
+                        <div>Point</div>
                     </div>
-
                 </div>
+
+            </div>
+
+            <div class="left_cards">
+                <div class="left_card">
+                    <img src="./src/image/compass.svg" alt="compass" class="left_icon">
+                    <a href="#">More details</a>
+                </div>
+
+                <div class="left_card">
+                    <img src="./src/image/map.svg" alt="compass" class="left_icon">
+                    <a href="#">More details</a>
+                </div>
+
             </div>
         </div>
         <div id="right">
@@ -74,9 +76,9 @@
                     <img src="./src/image/snorkeling.svg" alt="compass" class="right_icon">
                     <p class="description">36 hours <br> Snorkeling</p>
                     <div class="threeimg">
-                        <img src="./src/image/man-g3c16e4c0f_640.jpg" alt="">
-                        <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
-                        <img src="./src/image/woman-g4c3acef31_640.jpg" alt="">
+                        <img src="./src/image/man-g3c16e4c0f_640.jpg" class="rounded minifiedPic" alt="">
+                        <img src="./src/image/man-gfc63a375e_640.jpg" class="rounded minifiedPic" alt="">
+                        <img src="./src/image/woman-g4c3acef31_640.jpg" class="rounded minifiedPic" alt="">
                     </div>
                 </div>
 
@@ -86,8 +88,8 @@
                     <img src="./src/image/Hilking.svg" alt="compass" class="right_icon">
                     <p class="description">64 hours <br> Hiking</p>
                     <div class="threeimg">
-                        <img src="./src/image/man-g3c16e4c0f_640.jpg" alt="">
-                        <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
+                        <img src="./src/image/man-g3c16e4c0f_640.jpg" class="rounded minifiedPic" alt="">
+                        <img src="./src/image/man-gfc63a375e_640.jpg" class="rounded minifiedPic" alt="">
                     </div>
                 </div>
 
@@ -97,18 +99,18 @@
                     <img src="./src/image/kayaking.svg" alt="compass" class="right_icon">
                     <p class="description">42 hours <br> Kayaking</p>
                     <div class="threeimg">
-                        <img src="./src/image/man-g3c16e4c0f_640.jpg" alt="">
-                        <img src="./src/image/man-gfc63a375e_640.jpg" alt="">
-                        <img src="./src/image/woman-g4c3acef31_640.jpg" alt="">
+                        <img src="./src/image/man-g3c16e4c0f_640.jpg" class="rounded minifiedPic" alt="">
+                        <img src="./src/image/man-gfc63a375e_640.jpg" class="rounded minifiedPic" alt="">
+                        <img src="./src/image/woman-g4c3acef31_640.jpg" class="rounded minifiedPic" alt="">
                     </div>
                 </div>
             </div>
             <div class="foot">
                 <p>Greenwich Street New York, NY 10007</p>
                 <dic class="icons">
-                    <img src="" alt="f">
-                    <img src="" alt="in">
-                    <img src="" alt="vorona">
+                    <img src="" alt="Facebook">
+                    <img src="" alt="LinkedIn">
+                    <img src="" alt="Twiter">
                 </dic>
             </div>
             
