--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                         <a href="">More details</a>
                     </div>
                     <div id="threeDots">
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="d1"></div>
+                        <div class="d2"></div>
+                        <div class="d2"></div>
                     </div>
                 </div>
             </div>
