--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <span class="name bold">Helena Brauer</span>
                     <img src="src/image/woman-g4c3acef31_640.jpg" class="rounded" alt="A woman's profile picture">
                 </div>
-                <div id="hiddenOnSmallProfil">
+                <div id="hiddenOnSmallProfil" class="profil">
                     <div id="imgContainer">
                         <img src="src/image/woman-g4c3acef31_640.jpg" class="rounded profilPic" alt="A woman's profile picture">
                         <p id="edit" class="bold">edit</p>
@@ -74,6 +74,16 @@
             </div>
         </div>
         <div id="right">
+            <div id="onlyOnLargeProfil">
+                <div id="imgContainer">
+                    <img src="src/image/woman-g4c3acef31_640.jpg" class="rounded profilPic" alt="A woman's profile picture">
+                    <p id="edit" class="bold">edit</p>
+                </div>
+
+                <p class="name bold">Helena Brauer</p>
+                <p class="underName bold" id="manager">Manager</p>
+                <p class="underName" id="mail">helena@Brauer.com</p>
+            </div>
             <div class="right_cards">
                 <div class="right_card transpWhite">
                     <img src="./src/image/snorkeling.svg" alt="compass" class="right_icon">
@@ -134,6 +144,10 @@
             
         </div>
     </div>
+
+    <!-- <div id="waveBackground">
+        <img src="./src/image/Wave.svg" alt="wave">
+    </div> -->
 
     <script src="./src/js/index.js"></script>
 </body>
