FIX: fix mobil and wave background position and size

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <p class="underName bold" id="manager">Manager</p>
                 <p class="underName" id="mail">helena@Brauer.com</p>
             </div>
+            
             <div class="right_cards">
                 <div class="right_card transpWhite">
                     <img src="./src/image/snorkeling.svg" alt="compass" class="right_icon">
@@ -100,8 +101,6 @@
                     </div>
                 </div>
 
-                <br>
-
                 <div class="right_card transpWhite">
                     <img src="./src/image/Hilking.svg" alt="compass" class="right_icon">
                     <p class="description">64 hours <br> Hiking</p>
@@ -115,8 +114,6 @@
                         <div></div>
                     </div>
                 </div>
-
-                <br>
 
                 <div class="right_card transpWhite">
                     <img src="./src/image/kayaking.svg" alt="compass" class="right_icon">
@@ -133,17 +130,19 @@
                     </div>
                 </div>
             </div>
-            <div class="foot">
+
+            <footer>
+                <img id="mobilWave" src="./src/image/waveback.svg" alt="wave background">
                 <p>Greenwich Street New York, NY 10007</p>
                 <div class="icons">
                     <img src="./src/image/facebook-f.svg" alt="Facebook">
                     <img src="./src/image/linkedin_2.svg" alt="LinkedIn">
                     <img src="./src/image/twitter.svg" alt="Twiter">
                 </div>
-            </div>
-            
+            </footer>
         </div>
     </div>
+
 
     <!-- <div id="waveBackground">
         <img src="./src/image/Wave.svg" alt="wave">
